Fixes #780: Overflow auto messes visual appeal on few browser, hidding instead

--- a/layouts/v7/skins/vtiger/style.less
+++ b/layouts/v7/skins/vtiger/style.less
@@ -5248,7 +5248,7 @@ form[name="notification_settings"] .select2-choice {
 ************* Dashboard Styles *************
 ********************************************/
 li.dashboardWidget {
-	overflow: auto;
+	overflow: hidden;
 }
 
 .dashboardWidgetHeader .title{
